Sutter Health/src/objects/SurveyTaker__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>SurveyTakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Taken By Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys Taken</relationshipLabel>
        <relationshipName>SurveyTakers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detractors__c</fullName>
        <formula>IF( Q4_Score__c &lt;7, 1, 0)</formula>
        <label>Detractors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Resolved_and_Called_1_time__c</fullName>
        <formula>if(AND(Q1_Score__c == 1.00, Q2_Score__c == 1.00) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issue Resolved and Called 1 time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_not_resolved_and_called_2x_s__c</fullName>
        <formula>if(AND(Q1_Score__c == 0.00, Q2_Score__c == 2.00) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issue Not Resolved and Called 2x&apos;s</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_not_resolved_and_called_more_2x_s__c</fullName>
        <formula>if(AND(Q1_Score__c == 0.00, Q2_Score__c &gt; 2.00) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issue Not Resolved and Called &gt;2x&apos;s</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_resolved_and_called_2x_s__c</fullName>
        <formula>if(AND(Q1_Score__c == 1.00, Q2_Score__c == 2.00) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issue Resolved and Called 2x&apos;s</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_resolved_and_called_morethan_2x__c</fullName>
        <formula>if(AND(Q1_Score__c == 1.00, Q2_Score__c &gt; 2.00) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issue Resolved and Called &gt; 2x&apos;s</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Satisfaction_Score__c</fullName>
        <description>Sum of the scores of the individual question&apos;s responses</description>
        <label>Satisfaction Score</label>
        <summarizedField>SurveyQuestionResponse__c.Q3_Score__c</summarizedField>
        <summaryForeignKey>SurveyQuestionResponse__c.SurveyTaker__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Promoters__c</fullName>
        <formula>IF( Q4_Score__c &gt;8, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promoters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_Score__c</fullName>
        <inlineHelpText>Response &apos;Yes&apos;- Score 1, Response &apos;No&apos;- Score 0</inlineHelpText>
        <label>Q1 Score</label>
        <summarizedField>SurveyQuestionResponse__c.Q1_Score__c</summarizedField>
        <summaryForeignKey>SurveyQuestionResponse__c.SurveyTaker__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Q2_Score__c</fullName>
        <inlineHelpText>Response 1- Score 1, Response 2- Score 2, Response &gt;2- Score 3</inlineHelpText>
        <label>Q2 Score</label>
        <summarizedField>SurveyQuestionResponse__c.Q2_Score__c</summarizedField>
        <summaryForeignKey>SurveyQuestionResponse__c.SurveyTaker__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Q3_Score__c</fullName>
        <label>Q3 Score</label>
        <summarizedField>SurveyQuestionResponse__c.Q3_Score__c</summarizedField>
        <summaryForeignKey>SurveyQuestionResponse__c.SurveyTaker__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Score_Old__c</fullName>
        <label>Satisfaction Score</label>
        <summarizedField>SurveyQuestionResponse__c.Response_Score__c</summarizedField>
        <summaryForeignKey>SurveyQuestionResponse__c.SurveyTaker__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sold_Case_Notification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold Case Notification</label>
        <referenceTo>Employer_Group_Data__c</referenceTo>
        <relationshipLabel>Surveys Taken</relationshipLabel>
        <relationshipName>Surveys_Taken</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipName>SurveyTakers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Taken__c</fullName>
        <description>Whether the survey was taken or not</description>
        <label>Taken</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Taken By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Surveys_Taken</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Taken</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Q1_Score__c</columns>
        <columns>Q2_Score__c</columns>
        <columns>Q3_Score__c</columns>
        <columns>Q4_Score__c</columns>
        <columns>Overall_Satisfaction_Score__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys Taken</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>